<resources>
    <string name="app_name">Zot Hikes</string>
    <string name="zot_hikes">Zot Hikes</string>
    <string name="info_prompt">Enter your information below and hit "Finish" when done:</string>
    <string name="name_prompt">Name:</string>
    <string name="age_prompt">Age:</string>
    <string name="height_prompt">Height(in inches):</string>
    <string name="weight_prompt">Weight(in pounds):</string>
    <string name="gender_prompt">Gender:</string>
    <string name="target_weight_prompt">Target Weight:</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="height_hint">Height</string>
    <string name="weight_hint">Weight</string>
    <string name="gender_hint">Gender</string>
    <string name="goal_hint">Target Weight</string>
    <string name="finish_button">Finish</string>
    <string name="confirmation_prompt">Please confirm the data you have entered is correct. If you would like to make a change, press the back arrow.</string>
    <string name="confirm_button_prompt">Confirm</string>
    <string name="title_activity_nearby_map">Map</string>
    <string name="open_map">Open Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="main_menu">Main Menu</string>
    <string name="recommendation">Recommendation</string>
    <string name="cs_125_group_13_aaron_yao_jimmy_wang_rio_dmello_allan_wu">CS 125 Group 13 (Aaron Yao, Jimmy Wang, Rio Dmello, Allan Wu)</string>
    <string name="edit_info">Edit Info</string>
    <string name="wake_up_time">Wake-up Time:</string>
    <string name="wake_hint">Wake-up Time</string>
    <string name="sleep_time">Sleep Time:</string>
    <string name="sleep_hint">Sleep Time</string>
    <string name="activity_log">Activity Log</string>
    <string name="add_activity">Add Activity</string>
    <string name="activity">Activity</string>
    <string name="log_out">Log Out</string>
    <string name="login_with_google">Login with Google</string>
    <string name="welcome_to_zothikes">Welcome to Zot Hikes</string>
    <string name="to_get_started_please_login_with_your_google_account">To get started, please login with your Google Account:</string>
    <string name="trails_you_might_like">Trails you might like</string>
    <string name="view_trails_on_map">View trails on map</string>
</resources>