<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructions"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_prompt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_prompt" />

    <EditText
        android:id="@+id/name_input"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/age_prompt"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_prompt" />

    <EditText
        android:id="@+id/age_input"
        style="@style/input_prompts"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/height_prompt"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height_prompt" />

    <EditText
        android:id="@+id/height_input"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/height_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/weight_prompt"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_prompt" />

    <EditText
        android:id="@+id/weight_input"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/weight_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/gender_prompt"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender_prompt" />

    <EditText
        android:id="@+id/gender_input"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gender_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/goal_prompt"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/target_weight_prompt" />

    <EditText
        android:id="@+id/goal_input"
        style="@style/input_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/goal_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/finish_button" />
</LinearLayout>